# talkio

./: .gitignore  .mcp.json  1.md  LICENSE  Model_Group__3_.md  Model_Group__6_.md  PROJECT_REVIEW.md  README-en.md  README.md  RELEASE_NOTES.md  app.json  babel.config.js  claude-code-rules.md  components.json  eas.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  release-notes-v2.5.7.md  tailwind.config.js  talkio-tauri.code-workspace  tsconfig.json  vite.config.ts
.github/workflows/: android-release.yml  android.yml  ci.yml  release.yml
.windsurf/rules/: global.md
.windsurf/workflows/: android-install.md  release.md
android/: settings.gradle
app/: _layout.tsx
db/: index.ts  schema.ts
docs/: code-review-clean-code.md  code-review-report.md  confirmed-issues.md  db-driven-migration-plan.md  design-system.md  forum-post.md  issues.md  linuxdo-post.md  lobechat-comparison.md  mcp-stdio-plan.md  mobile-p0-fixes.md  performance-analysis.md  production-grade-audit-2026-02-17.md  project-completion-analysis-2026-02-18.md  project-status.md  provider-unified-protocol.md  release-v0.3.0.md  release-v0.4.0.md  release-v2.0.0.md  tauri-migration-plan.md
plugins/: withDevSuffix.js  withReleaseSigning.js
public/: personas.json
scripts/: validate-json.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp_stdio.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+219 files in other folders)
