[package]
name = "talkio"
version = "2.0.0"
description = "Talkio - AI Chat Client"
authors = ["lilongtao"]
license = "MIT"
repository = "https://github.com/lilongtao/talkio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "talkio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.6.0"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
